--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
     </section>
 
-    <!-- Skills Section nidhi pagal -->
+    <!-- Skills Section nidhi-->
     <section id="skills" class="section bg-white">
         <div class="container">
             <h2 class="text-center mb-4">Skills</h2>
